# barchart-race

./: .gitignore  CHANGELOG.md  Makefile  PLAN.md  README.md  pyproject.toml  run.py
.github/workflows/: ci.yml
data/: README.md
data/annotations/: emisivo_aerolinea_pasajeros.json  emisivo_aerolinea_tonelaje.json  emisivo_destinos_pasajeros.json  emisivo_destinos_tonelaje.json  receptivo_aerolinea_tonelaje.json  receptivo_destinos_pasajeros.json  receptivo_destinos_tonelaje.json
jekyll/: barchart-race.md
notebooks/original/: Publica_Movimiento_aéreo_neto_de_pasajeros_BarchartRace.ipynb
scripts/: analyze_traffic.py  inspect_data.py
src/: config.py  deploy.py  main.py
src/etl/: extract.py  load.py  transform.py
tests/: conftest.py  test_extract.py  test_integration.py  test_load.py  test_transform.py
