[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "barchart-race-etl"
version = "4.0.0"
description = "ETL para datos de tráfico aéreo internacional JAC Chile + visualización D3.js"
requires-python = ">=3.10"
dependencies = [
    "pandas>=3.0,<4",
    "matplotlib>=3.10,<4",
    "seaborn>=0.13,<1",
    "numpy>=2.4,<3",
]

[project.optional-dependencies]
dev = [
    "pytest>=9.0,<10",
    "pytest-cov>=6.0,<7",
    "ruff>=0.11,<1",
    "pre-commit>=3.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.ruff]
target-version = "py310"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM"]
ignore = ["E501", "B905"]
